# bmc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  util.cmake
scripts/: certified.in  fuzz.in  run.in
src/: aiger.hpp  bmc.cpp
